
- The docstring for `rinterface.endr()` was improperly stating that the function was not taking
  any argument (issue #423).

- Target version of dplyr and tidyr are now 0.7.2 and 0.7.1 respectively. 

- Fixed memory leak when pickling objects (issue #432). Fixing the leak caused a
  slight change in the API (see Section Changes above).


Release 2.9.0
=============

New features
------------

- New module :mod:`rpy2.situation` to extract and report informations
  about the environment, such as where is the R HOME, what is the
  version of R, what is the version of R rpy2 was built with, etc...
  The module is also designed to be run directly and provide diagnostics:
  `python -m rpy2.situation`.

- :meth:`Environment.values`, :meth:`Environment.pop`,
  :meth:`Environment.popitems`, :meth:`Environment.clear`
  to match :meth:`dict.values`,
  :meth:`dict.pop`, :meth:`dict.popitems`, :meth:`dict.clear`.

- :class:`VectorOperationsDelegator` now has a method `__matmul__` to implement
  Python's matrix multiplication operator (PEP-0645).

- A rule to convert R POSIXct vectors to pandas Timestamp vectors was added (issue #418).

- method :meth:`_repr_html_` for R vectors to display HTML in jupyter.


Changes
-------

- Starting several times the singleton :class:`EventProcessor` longer results
  in a :class:`RuntimeError`. This is now only a warning, addressing
  issue #182.

- The target version for the R package `dplyr` mapped is now 0.7.1, and
  :func:`rpy2.robjects.lib.dplyr.src_dt` (issue #357) and
  :func:`rpy2.robjects.lib.dplyr.src_desc` are no longer present.

- :meth:`Environment.keys` is now a iterator to match :meth:`dict.keys`,
  also an interator in Python 3.

- Target version of `ggplot2` library is 2.2.1.

- Option `stringsasfactors` in the constructor for the class `DataFrame`. If `False`, the
  strings are no longer converted to factors. When converting from pandas data frames
  the default is to no longer convert columns of strings to factors.
